# routes/api.go
@@ -58,8 +58,6 @@ func SetupAPIEndpoints(router *gin.Engine, diaryController *controllers.DiaryCon
 
 	api := router.Group("/api")
 	{
-		api.POST("/login", userController.Login)
-		api.POST("/register", userController.Register)
 		api.POST("/guest-login", userController.GuestLogin)
 
 		// 認証が必要なグループ
